[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/buttons/clicked_button.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons/button_shadow.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons/hover_home.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons/normal_button.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons/clicked_home.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons/normal_home.png" type="Texture" id=6]
[ext_resource path="res://scripts/button.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="button" type="TextureButton"]
margin_right = 238.0
margin_bottom = 91.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 4 )
stretch_mode = 5
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow" type="Sprite" parent="."]
show_behind_parent = true
z_as_relative = false
texture = ExtResource( 2 )
offset = Vector2( 119, 45.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
offset = Vector2( 119, 45.5 )

[connection signal="button_down" from="." to="." method="_on_button_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_button_mouse_exited"]
